--- a/Web-App/App3/Dockerfile
+++ b/Web-App/App3/Dockerfile
@@ -1,9 +1,22 @@
-FROM python:3.11-slim
+# Use an official Python runtime as a parent image
+FROM python:3.9-slim
+
+# Set the working directory in the container
 WORKDIR /app
+
+# Copy the requirements file
 COPY requirements.txt .
-RUN pip install -r requirements.txt
-COPY app.py .
+
+# Install any needed packages specified in requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy the application code into the container
+COPY . .
+
+# Make port 80 available to the world outside this container
 EXPOSE 80
+
+# Run app.py when the container launches
 CMD ["python", "app.py"]
-- app3/requirements.txt:
-flask
+
+
